feat[BE]: check userAssignmentSessionId for valid session on GET /api/user_assignments/:user_assignment_id/questions
